--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -735,6 +735,8 @@ knitr::include_graphics("ch_populations/images/dvalue_ex4.png")
 
 You can visualize any $\delta$ value (i.e., population $d$-value) using the rpsychologist [website](https://rpsychologist.com/d3/cohend/). This website also provides a number of interesting statistics such as the percentage of overlapping values in two populations for a given $\delta$/d value.
 
+\newpage
+
 ## Key points
 
 1. Populations are described using numbers called parameters.
